[project]
requires-python = ">=3.10"
description = "easily run python unit tests"
authors = [
  { name = "Jay Marcyes", email = "jay@marcyes.com" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Testing",
  "Programming Language :: Python :: 3"
]
name = "pyt"
dynamic = [
  "version"
]
readme = "README.md"
license = { file = "LICENSE.txt" }

[project.urls]
Homepage = "http://github.com/Jaymon/pyt"
Repository = "https://github.com/Jaymon/pyt"

[project.optional-dependencies]
tests = [
  "testdata",
]

[project.scripts]
pyt = "pyt.__main__:console"

[build-system]
requires = [
  "setuptools>=62.3.0"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = [
  "tests*",
  "example*",
  "*_test*",
  "docs*"
]
include = [
  "pyt*"
]

[tool.setuptools.dynamic]
version = { attr = "pyt.__version__" }

